add_subdirectory( ARToolKit )
add_subdirectory( Audio )
add_subdirectory( Colour )
add_subdirectory( Core )
add_subdirectory( dlib )
add_subdirectory( ffmpeg )
add_subdirectory( FFTW )
add_subdirectory( File )
add_subdirectory( Firmata )
add_subdirectory( GUI )
add_subdirectory( Image )
add_subdirectory( ISF )
add_subdirectory( Kinect )
add_subdirectory( LeapMotion )
add_subdirectory( Lua )
add_subdirectory( OpenGL )
add_subdirectory( PortAudio )
